--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -1,6 +1,6 @@
-<div class="d-flex col fullscreen mat-typography">
+<div class="flex flex-col fullscreen mat-typography">
   <mm-toolbar class="mat-elevation-z5 toolbar" [header]="toolbarHeader" (toggleSidenav)="sidenav.toggle()"></mm-toolbar>
-  <mat-sidenav-container class="fill">
+  <mat-sidenav-container class="flex-1">
     <mat-sidenav
         #sidenav
         class="mm-sidenav"
