--- a/src/sass/layout/_flex.scss
+++ b/src/sass/layout/_flex.scss
@@ -1,24 +1,22 @@
-@each $breakpoint in map-keys($breakpoints) {
-  @include media-min-width($breakpoint, $breakpoints) {
-    $prefix: breakpoint-prefix($breakpoint, $breakpoints);
+$max-order: 3 !default;
 
-    .#{$prefix}flex-1    { flex: 1 1 0; }
-    .#{$prefix}flex-auto { flex: 1 1 auto; }
+@mixin flex-classes($prefix) {
+  .#{$prefix}flex-1    { flex: 1 1 0; }
+  .#{$prefix}flex-auto { flex: 1 1 auto; }
 
-    .#{$prefix}flex-col { flex-direction: column; }
-    .#{$prefix}flex-row { flex-direction: row; }
+  .#{$prefix}flex-col { flex-direction: column; }
+  .#{$prefix}flex-row { flex-direction: row; }
 
-    .#{$prefix}flex-grow { flex-grow: 1; }
+  .#{$prefix}flex-grow { flex-grow: 1; }
 
-    .#{$prefix}flex-wrap { flex-wrap: wrap; }
+  .#{$prefix}flex-wrap { flex-wrap: wrap; }
 
-    .#{$prefix}items-center { align-items: center; }
+  .#{$prefix}items-center { align-items: center; }
 
-    .#{$prefix}justify-center { justify-content: center; }
-    .#{$prefix}justify-end    { justify-content: flex-end; }
+  .#{$prefix}justify-center { justify-content: center; }
+  .#{$prefix}justify-end    { justify-content: flex-end; }
 
-    @for $i from 0 through $max-order {
-      .#{$prefix}order-#{$i} { order: $i; }
-    }
+  @for $i from 0 through $max-order {
+    .#{$prefix}order-#{$i} { order: $i; }
   }
 }
