--- a/src/sass/layout/_utils.scss
+++ b/src/sass/layout/_utils.scss
@@ -1,3 +1,9 @@
+@use '../abstracts/variables';
+@use './spacing';
+
+$screen-md: variables.$screen-md;
+$spacer: spacing.$spacer;
+
 .border-right {
   border-right: 1px solid rgba($color: #000000, $alpha: 0.12);
 }
@@ -14,144 +20,6 @@
   height: 100%;
 }
 
-.m-0 {
-  margin: 0 !important;
-}
-
-.m-1 {
-  margin: $spacer * 0.25 !important;
-}
-
-.m-2 {
-  margin: $spacer * 0.5 !important;
-}
-
-.m-3 {
-  margin: $spacer !important;
-}
-
-.mb-0 {
-  margin-bottom: 0 !important;
-}
-
-.mb-1 {
-  margin-bottom: $spacer * 0.25 !important;
-}
-
-.mb-2 {
-  margin-bottom: $spacer * 0.5 !important;
-}
-
-.mb-3 {
-  margin-bottom: $spacer !important;
-}
-
-.ml-0 {
-  margin-left: 0 !important;
-}
-
-.ml-1 {
-  margin-left: $spacer * 0.25 !important;
-}
-
-.ml-2 {
-  margin-left: $spacer * 0.5 !important;
-}
-
-.ml-3 {
-  margin-left: $spacer !important;
-}
-
-.mx-0 {
-  margin-left: 0 !important;
-  margin-right: 0 !important;
-}
-
-.mx-1 {
-  margin-left: $spacer * 0.25 !important;
-  margin-right: $spacer * 0.25 !important;
-}
-
-.mx-2 {
-  margin-left: $spacer * 0.5 !important;
-  margin-right: $spacer * 0.5 !important;
-}
-
-.mx-3 {
-  margin-left: $spacer !important;
-  margin-right: $spacer !important;
-}
-
-.p-0 {
-  padding: 0 !important;
-}
-
-.p-1 {
-  padding: $spacer * 0.25 !important;
-}
-
-.p-2 {
-  padding: $spacer * 0.5 !important;
-}
-
-.p-3 {
-  padding: $spacer !important;
-}
-
-.pl-0 {
-  padding-left: 0 !important;
-}
-
-.pl-1 {
-  padding-left: $spacer * 0.25 !important;
-}
-
-.pl-2 {
-  padding-left: $spacer * 0.5 !important;
-}
-
-.pl-3 {
-  padding-left: $spacer !important;
-}
-
-.px-0 {
-  padding-left: 0 !important;
-  padding-right: 0 !important;
-}
-
-.px-1 {
-  padding-left: $spacer * 0.25 !important;
-  padding-right: $spacer * 0.25 !important;
-}
-
-.px-2 {
-  padding-left: $spacer * 0.5 !important;
-  padding-right: $spacer * 0.5 !important;
-}
-
-.px-3 {
-  padding-left: $spacer !important;
-  padding-right: $spacer !important;
-}
-
 .rounded {
   border-radius: 5px;
-}
-
-.w-100 {
-  width: 100%;
-}
-
-.w-50 {
-  width: 50%;
-}
-
-@media (min-width: #{$screen-md}) {
-  .w-md-100 {
-    width: 100%;
-  }
-
-  .w-md-50 {
-    width: 50%;
-  }
 }
