feat(setup|style): Finishing moving util style into more specific files.
Issue #87

--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -1,4 +1,4 @@
-<div class="items-center flex-col flex h-100 w-full flex-wrap">
+<div class="items-center flex-col flex h-full w-full flex-wrap">
   <mm-player-form
       class="p-4 w-full sm:order-2 sm:w-1/2"
       [players]="players$ | async"
