--- a/src/sass/layout/_overflows.scss
+++ b/src/sass/layout/_overflows.scss
@@ -1,5 +1,5 @@
-@use '../abstracts/variables';
+$overflows: auto, hidden;
 
-@each $value in variables.$overflows {
-  .overflow-#{$value} { overflow: $value !important; }
+@each $value in $overflows {
+  .overflow-#{$value} { overflow: $value; }
 }
