--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -1,16 +1,25 @@
 <div class="flex flex-col fullscreen mat-typography">
-  <mm-toolbar class="mat-elevation-z5 toolbar" [header]="toolbarHeader" (toggleSidenav)="sidenav.toggle()"></mm-toolbar>
+  <mm-toolbar
+    class="mat-elevation-z5 toolbar"
+    [header]="toolbarHeader"
+    (toggleSidenav)="sidenav.toggle()"
+  ></mm-toolbar>
   <mat-sidenav-container class="flex-1">
     <mat-sidenav
-        #sidenav
-        class="mm-sidenav"
-        [mode]="sidenavMode$ | async"
-        [opened]="showSidenav$ | async">
+      #sidenav
+      class="mm-sidenav"
+      [mode]="sidenavMode$ | async"
+      [opened]="showSidenav$ | async"
+    >
       <mat-nav-list class="px-2">
         <mm-nav-item icon="build" routerLink="/setup">
           Setup
         </mm-nav-item>
-        <mm-nav-item icon="group_work" routerLink="/pods">
+        <mm-nav-item
+          icon="group_work"
+          routerLink="/pods"
+          *ngIf="hasDraftStarted$ | async"
+        >
           Pods
         </mm-nav-item>
         <mm-nav-item icon="group" routerLink="/pairings">
