--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -6,6 +6,7 @@
 @import 'mixins/mm-footer.scss';
 @import 'mixins/mm-sidenav.scss';
 @import 'mixins/mm-tabs.scss';
+@import 'mixins/players-list.component.scss';
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
@@ -32,3 +33,4 @@ $mirror-match-theme: mat-light-theme($mirror-match-primary, $mirror-match-accent
 @include mm-footer-theme($mirror-match-theme);
 @include mm-sidenav-theme($mirror-match-theme);
 @include mm-tabs-theme($mirror-match-theme);
+@include players-list($mirror-match-theme);
