style(pods|root|setup): Working on "dropped" text.
- Cleaning up theme file to v10 style.
- Removing unused FlexLayoutModule from AppModule.
- Removing unneeded div from PodsComponent.
- Changing style of dropped message in PlayersListComponent.
- Hiding Start button on SetupPage if already started.

Issue #89

--- a/src/app/setup/components/players-list/players-list.component.html
+++ b/src/app/setup/components/players-list/players-list.component.html
@@ -1,9 +1,8 @@
-<mat-list>
+<mat-list class="players-list">
   <mat-list-item *ngFor="let player of players">
-    <h3 matLine>{{player.name}}<span class="dropped-label" *ngIf="player.dropped"> (dropped)</span></h3>
-    <button
-        mat-button
-        (click)="editClicked(player)">
+    <h3 matLine>{{player.name}}</h3>
+    <span matLine class="dropped-label" *ngIf="player.dropped">Dropped</span>
+    <button mat-button (click)="editClicked(player)">
       <mat-icon>edit</mat-icon>
     </button>
   </mat-list-item>
