--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -1,19 +1,26 @@
 <div class="items-center flex-col flex h-full w-full flex-wrap">
   <mm-player-form
-      class="p-4 w-full sm:order-2 sm:w-1/2"
-      [players]="players$ | async"
-      (addPlayer)="onAddPlayer($event)"></mm-player-form>
+    class="p-4 w-full sm:order-2 sm:w-1/2"
+    [players]="players$ | async"
+    (addPlayer)="onAddPlayer($event)"
+  ></mm-player-form>
   <mm-players-list
-      class="border-right flex-1 overflow-auto pb-3 px-4 players-list w-full sm:order-1 sm:w-1/2"
-      [players]="players$ | async"
-      (editPlayer)="onEditPlayer($event)"></mm-players-list>
+    class="border-right flex-1 overflow-auto pb-3 px-4 players-list w-full sm:order-1 sm:w-1/2"
+    [players]="players$ | async"
+    (editPlayer)="onEditPlayer($event)"
+  ></mm-players-list>
   <section
-      class="flex justify-center mb-4 sm:order-3"
-      *ngIf="canBeginTournament$ | async">
+    class="flex justify-center mb-4 sm:order-3"
+    *ngIf="canBeginTournament$ | async"
+  >
     <button
-        class="text-uppercase"
-        mat-raised-button
-        color="primary"
-        (click)="onStartClicked()">Start</button>
+      class="text-uppercase"
+      mat-raised-button
+      color="primary"
+      *ngIf="!hasAnythingStarted"
+      (click)="onStartClicked()"
+    >
+      Start
+    </button>
   </section>
 </div>
