--- a/src/mixins/players-list.component.scss
+++ b/src/mixins/players-list.component.scss
@@ -1,9 +1,20 @@
 @import '~@angular/material/theming';
 
-@mixin players-list($theme) {
-  $warn: map-get($theme, warn);
+@mixin players-list-color($config_or_theme) {
+  $config: mat-get-color-config($config_or_theme);
+  $foreground: map-get($config, foreground);
 
-  .dropped-label {
-    color: mat-color($warn);
+  .players-list {
+    .dropped-label {
+      color: mat-color($foreground, secondary-text);
+    }
+  }
+}
+
+@mixin players-list-theme($theme) {
+  $color: mat-get-color-config($theme);
+
+  @if $color != null {
+    @include players-list-color($color);
   }
 }
