--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -1,11 +1,11 @@
 <div class="items-center flex-col flex h-full w-full flex-wrap">
   <mm-player-form
-    class="p-4 w-full sm:order-2 sm:w-1/2"
+    class="p-4 w-full sm:w-1/2"
     [players]="players$ | async"
     (addPlayer)="onAddPlayer($event)"
   ></mm-player-form>
   <mm-players-list
-    class="border-right flex-1 overflow-auto pb-3 px-4 players-list w-full sm:order-1 sm:w-1/2"
+    class="border-right flex-1 overflow-auto pb-3 px-4 players-list w-full sm:w-1/2"
     [players]="players$ | async"
     (editPlayer)="onEditPlayer($event)"
   ></mm-players-list>
