--- a/src/app/shared/components/fab/fab.component.scss
+++ b/src/app/shared/components/fab/fab.component.scss
@@ -1,14 +1,22 @@
-.fab-button {
-  border-radius: 1.5rem;
+:host {
   position: absolute;
   right: 1rem;
   bottom: 1rem;
-  text-transform: uppercase;
+
+  .fab-button {
+    border-radius: 1.5rem;
+    text-transform: uppercase;
+  }
 }
 
-:host(.centered) {
-  .fab-button {
-    right: 50%;
-    transform: translateX(50%);
-  }
+:host(.bottom-center) {
+  right: 50%;
+  transform: translateX(50%);
+}
+
+:host(.top-left) {
+  bottom: unset;
+  left: 1rem;
+  transform: translateY(-50%);
+  z-index: 3;
 }
