--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col fullscreen mat-typography">
+<!-- <div class="flex flex-col fullscreen mat-typography">
   <mm-toolbar
     class="mat-elevation-z5 toolbar"
     [header]="toolbarHeader"
@@ -31,4 +31,4 @@
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
-</div>
+</div> -->
