--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -1,6 +1,28 @@
-<mat-toolbar color="primary">
-  <button mat-icon-button (click)="toggleSidenav.emit()">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <h1 class="ml-2">{{header}}</h1>
-</mat-toolbar>
+<header class="mat-typography">
+  <mat-toolbar [color]="color" class="mat-elevation-z4">
+    <mat-toolbar-row>
+      <span>Mirror Match</span>
+    </mat-toolbar-row>
+    <mat-toolbar-row class="nav-row" *ngIf="hasAnythingStarted$ | async">
+      <nav mat-tab-nav-bar [backgroundColor]="color" [disablePagination]="true">
+        <a
+          mat-tab-link
+          routerLink="/setup"
+          routerLinkActive
+          #rlaSetup="routerLinkActive"
+          [active]="rlaSetup.isActive"
+          >Setup</a
+        >
+        <a
+          mat-tab-link
+          routerLink="/pods"
+          routerLinkActive
+          #rlaPods="routerLinkActive"
+          [active]="rlaPods.isActive"
+          *ngIf="hasDraftStarted$ | async"
+          >Pods</a
+        >
+      </nav>
+    </mat-toolbar-row>
+  </mat-toolbar>
+</header>
