--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -3,10 +3,9 @@
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
-@import 'mixins/mm-footer.scss';
-@import 'mixins/mm-sidenav.scss';
-@import 'mixins/mm-tabs.scss';
-@import 'mixins/players-list.component.scss';
+// @import 'mixins/mm-footer.scss';
+// @import 'mixins/mm-sidenav.scss';
+// @import 'mixins/players-list.component.scss';
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
@@ -16,28 +15,28 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$mirror-match-primary: mat-palette($mat-indigo);
-$mirror-match-accent: mat-palette($mat-pink, A200, A100, A400);
+// $mirror-match-primary: mat-palette($mat-indigo);
+// $mirror-match-accent: mat-palette($mat-pink, A200, A100, A400);
 
-// The warn palette is optional (defaults to red).
-$mirror-match-warn: mat-palette($mat-red);
+// // The warn palette is optional (defaults to red).
+// $mirror-match-warn: mat-palette($mat-red);
 
-// Create the theme object (a Sass map containing all of the palettes).
-// $mirror-match-theme: mat-light-theme($mirror-match-primary, $mirror-match-accent, $mirror-match-warn);
-$mirror-match-theme: mat-light-theme((
-  color: (
-    primary: $mirror-match-primary,
-    accent: $mirror-match-accent,
-    warn: $mirror-match-warn
-  )
-));
+// // Create the theme object (a Sass map containing all of the palettes).
+// // $mirror-match-theme: mat-light-theme($mirror-match-primary, $mirror-match-accent, $mirror-match-warn);
+// $mirror-match-theme: mat-light-theme((
+//   color: (
+//     primary: $mirror-match-primary,
+//     accent: $mirror-match-accent,
+//     warn: $mirror-match-warn
+//   )
+// ));
+@import 'theme-setup.scss';
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($mirror-match-theme);
 
-@include mm-footer-theme($mirror-match-theme);
-@include mm-sidenav-theme($mirror-match-theme);
-@include mm-tabs-theme($mirror-match-theme);
-@include players-list-theme($mirror-match-theme);
+// @include mm-footer-theme($mirror-match-theme);
+// @include mm-sidenav-theme($mirror-match-theme);
+// @include players-list-theme($mirror-match-theme);
