feat(root|pods|setup): Starting on fixing setup page after nav changes.
- Removing unnecessary div in AppComponent.
- Changing main content top margin depending on whether the nav is there.
- Fixing PodsGuard to check if draft has started.
- Starting on tweaking setup page.

Issue #96

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,15 +22,19 @@ $nav-link-height: 48px;
   flex-direction: column;
   min-height: 100%;
 
-  .body-container {
-    display: flex;
-  }
-
   .content-container {
-    margin-top: $height-mobile + $nav-link-height;
+    margin-top: $height-mobile;
     width: 100%;
 
     &.large {
+      margin-top: $height-desktop;
+    }
+
+    &.with-tabs {
+      margin-top: $height-mobile + $nav-link-height;
+    }
+
+    &.large.with-tabs {
       margin-top: $height-desktop + $nav-link-height;
     }
   }
