--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <!-- <mm-layout></mm-layout> -->
 <mm-toolbar color="primary"></mm-toolbar>
-<div class="body-container">
-  <div class="content-container" [class.large]="!(isMobile$ | async)">
-    <router-outlet></router-outlet>
-  </div>
+<div class="content-container" [class.large]="!(isMobile$ | async)" [class.with-tabs]="hasAnythingStarted$ | async">
+  <router-outlet></router-outlet>
 </div>
