--- a/src/app/setup/containers/setup-page/setup-page.component.scss
+++ b/src/app/setup/containers/setup-page/setup-page.component.scss
@@ -1,5 +1,5 @@
-.players-list {
-  @media (min-width: 600px) {
-    flex: 1 100%;
-  }
-}
+// .players-list {
+//   @media (min-width: 600px) {
+//     flex: 1 100%;
+//   }
+// }
