--- a/src/app/setup/components/players-list/players-list.component.html
+++ b/src/app/setup/components/players-list/players-list.component.html
@@ -1,9 +1,7 @@
-<mat-list class="players-list">
-  <mat-list-item *ngFor="let player of players">
-    <h3 matLine>{{player.name}}</h3>
-    <span matLine class="dropped-label" *ngIf="player.dropped">Dropped</span>
-    <button mat-button (click)="editClicked(player)">
-      <mat-icon>edit</mat-icon>
-    </button>
-  </mat-list-item>
-</mat-list>
+<mat-action-list class="players-list">
+  <button mat-list-item *ngFor="let player of players">
+    <mat-icon mat-list-icon>edit</mat-icon>
+    <span mat-line>{{player.name}}</span>
+    <!-- <span matLine class="dropped-label" *ngIf="player.dropped">Dropped</span> -->
+  </button>
+</mat-action-list>
