feat(root|setup): Working on bottom app bar for actions on setup page.
Issue #96

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,6 +24,7 @@ $nav-link-height: 48px;
 
   .content-container {
     margin-top: $height-mobile;
+    margin-bottom: 56px;
     width: 100%;
 
     &.large {
