--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -25,3 +25,11 @@
   </section>
 </div> -->
 <mm-players-list [players]="players$ | async"></mm-players-list>
+<footer>
+  <mat-icon>delete</mat-icon>
+  <span class="spacer"></span>
+  <mat-icon>done</mat-icon>
+  <button mat-mini-fab color="accent">
+    <mat-icon>add</mat-icon>
+  </button>
+</footer>
