--- a/src/app/setup/containers/setup-page/setup-page.component.scss
+++ b/src/app/setup/containers/setup-page/setup-page.component.scss
@@ -1,5 +1,34 @@
+@import '~@angular/material/theming';
+@import '../../../../theme-setup.scss';
 // .players-list {
 //   @media (min-width: 600px) {
 //     flex: 1 100%;
 //   }
 // }
+
+$primary: map-get($mirror-match-theme, primary);
+
+footer {
+  align-items: center;
+  color: mat-color($primary, default-contrast);
+  background: mat-color($primary);
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  height: 56px;
+  padding: 0 16px;
+  position: fixed;
+  width: 100%;
+  white-space: nowrap;
+
+  button {
+    position: fixed;
+    left: 50%;
+    bottom: 56px;
+    transform: translate(-50%, 50%);
+  }
+
+  .spacer {
+    flex: 1 1 auto;
+  }
+}
