--- a/src/app/tournament/containers/setup-page/setup-page.component.html
+++ b/src/app/tournament/containers/setup-page/setup-page.component.html
@@ -33,7 +33,7 @@
     <mat-icon>delete</mat-icon>
   </button>
   <span class="spacer"></span>
-  <button mat-icon-button>
+  <button mat-icon-button (click)="onStartClicked()">
     <mat-icon>done</mat-icon>
   </button>
   <button mat-mini-fab color="accent" class="fab">
