feat(setup): Working on a new setup flow.
- Changing main app router to load a setup module.
- Changing main AppComponent to just be a router outlet.
- Starting on PlayersPage of new SetupModule.
- Adding some animations I've been fiddling with.

Issue #96

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!-- <mm-layout></mm-layout> -->
-<mm-toolbar color="primary"></mm-toolbar>
+<!-- <mm-toolbar color="primary"></mm-toolbar>
 <div class="content-container" [class.large]="!(isMobile$ | async)" [class.with-tabs]="hasAnythingStarted$ | async">
   <router-outlet></router-outlet>
-</div>
+</div> -->
+<router-outlet></router-outlet>
