--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -8,6 +8,6 @@
     <span class="spacer"></span>
   </span>
   <span class="spacer">
-    <button mat-button color="primary">Next<mat-icon>chevron_right</mat-icon></button>
+    <button mat-button [disabled]="!(isNextButtonEnabled$ | async)" color="primary">Next<mat-icon>chevron_right</mat-icon></button>
   </span>
 </mat-toolbar>
