feat(setup): Getting started on animation for add player.
Issue #96

--- a/src/app/setup/containers/players-page/players-page.component.html
+++ b/src/app/setup/containers/players-page/players-page.component.html
@@ -5,10 +5,10 @@
   </div>
 </div>
 
-<button mat-mini-fab *ngIf="useMiniFab$ | async" class="add-button mini">
+<button mat-mini-fab *ngIf="useMiniFab$ | async" class="add-button mini" (click)="addPlayerClicked()">
   <mat-icon>add</mat-icon>
 </button>
 
-<button mat-fab *ngIf="!(useMiniFab$ | async)" class="add-button">
+<button mat-fab *ngIf="!(useMiniFab$ | async)" class="add-button" (click)="addPlayerClicked()">
   <mat-icon>add</mat-icon>
 </button>
