--- a/src/app/setup/containers/add-player/add-player.component.scss
+++ b/src/app/setup/containers/add-player/add-player.component.scss
@@ -3,12 +3,13 @@
 $background: map-get($mirror-match-theme, background);
 
 :host {
-  background: mat-color($background, background);
+  // background: mat-color($background, background);
+  background: red;
   display: block;
   position: absolute;
-  top: 0;
   right: 0;
   bottom: 0;
-  left: 0;
+  height: 100vh;
+  width: 100vw;
   z-index: 24;
 }
