feat(setup): Working on animations.
Issue #96

--- a/src/app/setup/containers/add-player/add-player.component.scss
+++ b/src/app/setup/containers/add-player/add-player.component.scss
@@ -3,8 +3,7 @@
 $background: map-get($mirror-match-theme, background);
 
 :host {
-  // background: mat-color($background, background);
-  background: red;
+  background: mat-color($background, background);
   display: block;
   position: absolute;
   right: 0;
