--- a/src/app/setup/containers/players-page/players-page.component.html
+++ b/src/app/setup/containers/players-page/players-page.component.html
@@ -10,7 +10,6 @@
   *ngIf="useMiniFab$ | async"
   class="add-button mini"
   (click)="addPlayerClicked()"
-  [@addPlayer]
 >
   <mat-icon>add</mat-icon>
 </button>
@@ -23,3 +22,4 @@
 >
   <mat-icon>add</mat-icon>
 </button>
+<div class="scrim"></div>
