--- a/src/app/setup/containers/add-player/add-player.component.html
+++ b/src/app/setup/containers/add-player/add-player.component.html
@@ -1,1 +1,3 @@
-<p>add-player works!</p>
+<mat-toolbar color="primary">
+  <button mat-icon-button (click)="back()"><mat-icon>arrow_back</mat-icon></button>
+</mat-toolbar>
