feat(setup|shared): Working on adding players.
- Creating a shared BottomSheet component.
- Creating an AddPlayerSheet component.
- Adding new sheet to PlayersPage.

Issue #96

--- a/src/app/setup/containers/players-page/players-page.component.html
+++ b/src/app/setup/containers/players-page/players-page.component.html
@@ -22,3 +22,7 @@
 >
   <mat-icon>add</mat-icon>
 </button>
+
+<mm-bottom-sheet [show]="isAddingPlayer" (close)="isAddingPlayer = false">
+  <mm-add-player-sheet></mm-add-player-sheet>
+</mm-bottom-sheet>
