--- a/src/app/setup/containers/add-player/add-player.component.html
+++ b/src/app/setup/containers/add-player/add-player.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button (click)="back()"><mat-icon>arrow_back</mat-icon></button>
+  <button mat-icon-button (click)="back()"><mat-icon>arrow_back</mat-icon></button><span>Add player</span>
 </mat-toolbar>
