--- a/src/app/setup/components/add-player-form/add-player-form.component.scss
+++ b/src/app/setup/components/add-player-form/add-player-form.component.scss
@@ -2,8 +2,13 @@
   display: flex;
   flex-direction: column;
 
-  .add-button {
-    text-transform: uppercase;
-    width: 100%;
+  form {
+    display: flex;
+    flex-direction: column;
+
+    .add-button {
+      text-transform: uppercase;
+      width: 100%;
+    }
   }
 }
