--- a/src/app/setup/containers/players-page/players-page.component.html
+++ b/src/app/setup/containers/players-page/players-page.component.html
@@ -24,5 +24,5 @@
 </button>
 
 <mm-bottom-sheet [show]="isAddingPlayer" (close)="isAddingPlayer = false">
-  <mm-add-player-form></mm-add-player-form>
+  <mm-add-player-form [playerNames]="playerNames$ | async" (addPlayer)="onAddPlayer($event)"></mm-add-player-form>
 </mm-bottom-sheet>
