feat(setup|shared): Clean up add player stuff.
- Changing the error field to check for invalid and use a getErrorMessage()
  function.
- Moving/renaming newPlayerValidator file to match angular website examples.

Issue #96

--- a/src/app/setup/components/add-player-form/add-player-form.component.html
+++ b/src/app/setup/components/add-player-form/add-player-form.component.html
@@ -19,8 +19,8 @@
     >
       <mat-icon>clear</mat-icon>
     </button>
-    <mat-error *ngIf="playerGroup.get('name').hasError('playerExists')">
-      {{ playerGroup.get('name').getError('playerExists') }}
+    <mat-error *ngIf="playerGroup.get('name').invalid">
+      {{ getErrorMessage() }}
     </mat-error>
   </mat-form-field>
   <div>
