--- a/src/app/core/components/bottom-sheet-container/bottom-sheet-container.component.scss
+++ b/src/app/core/components/bottom-sheet-container/bottom-sheet-container.component.scss
@@ -1,21 +1,12 @@
-$background: rgba(0, 0, 0, 0.32);
+@import '../../../../theme-setup.scss';
+
+$background: map-get($mirror-match-theme, background);
+$foreground: map-get($mirror-match-theme, foreground);
 
 :host {
-  // pointer-events: none;
-  // position: fixed;
-  // top: 0;
-  // left: 0;
+  background: mat-color($background, dialog);
+  color: mat-color($foreground, text);
   height: 100%;
+  min-height: inherit;
   width: 100%;
-  // z-index: 16;
-
-  // .backdrop {
-  //   background: $background;
-  //   pointer-events: auto;
-  //   position: absolute;
-  //   top: 0;
-  //   right: 0;
-  //   bottom: 0;
-  //   left: 0;
-  // }
 }
