--- a/src/app/core/components/bottom-sheet-container/bottom-sheet-container.component.scss
+++ b/src/app/core/components/bottom-sheet-container/bottom-sheet-container.component.scss
@@ -7,6 +7,7 @@ $foreground: map-get($mirror-match-theme, foreground);
   background: mat-color($background, dialog);
   color: mat-color($foreground, text);
   height: 100%;
+  max-height: 50vh;
   min-height: inherit;
   width: 100%;
 }
