--- a/src/app/setup/containers/players-page/players-page.component.html
+++ b/src/app/setup/containers/players-page/players-page.component.html
@@ -23,6 +23,6 @@
   <mat-icon>add</mat-icon>
 </button>
 
-<mm-bottom-sheet [show]="isAddingPlayer" (close)="isAddingPlayer = false">
+<!-- <mm-bottom-sheet [show]="isAddingPlayer" (close)="isAddingPlayer = false">
   <mm-add-player-form [playerNames]="playerNames$ | async" (addPlayer)="onAddPlayer($event)"></mm-add-player-form>
-</mm-bottom-sheet>
+</mm-bottom-sheet> -->
