feat(core): Working on bottom sheet.
- Also adding --tsconfig flag to postinstall script.
- Working on animations for bottom sheet.
- Adding functionality to close the sheet when clicking on the scrim.

Issue #96

--- a/src/app/core/components/bottom-sheet/bottom-sheet.component.html
+++ b/src/app/core/components/bottom-sheet/bottom-sheet.component.html
@@ -1,4 +1,4 @@
-<div class="scrim"></div>
+<div class="scrim" (click)="scrimClicked()"></div>
 <div class="content">
   <ng-template mmBottomSheetContent></ng-template>
 </div>
