feat(core): Working on BottomSheet.
- Tweaking animation states.
- Fixing leave animation.
- Creating config class for passing input to sheet component.
- Creating ref class for wrapping the BottomSheetComponent.

Issue #96

--- a/src/app/core/components/bottom-sheet/bottom-sheet.component.html
+++ b/src/app/core/components/bottom-sheet/bottom-sheet.component.html
@@ -1,4 +1,4 @@
-<div class="scrim" (click)="scrimClicked()"></div>
+<div class="scrim" (click)="scrimClicked.emit()"></div>
 <div class="content">
   <ng-template mmBottomSheetContent></ng-template>
 </div>
