feat(core|setup): Finishing up add player.
- Change BottomSheetRef to use an attach method.
- Creating a BOTTOM_SHEET_DATA injection token for sending data to the sheet.
- Moving away from using custom elements. Just normally inserting the component into the DOM.
- Focusing the input when opening the form.

Issue #96

--- a/src/app/setup/components/add-player-form/add-player-form.component.html
+++ b/src/app/setup/components/add-player-form/add-player-form.component.html
@@ -1,7 +1,8 @@
-<form [formGroup]="playerGroup" (ngSubmit)="onSubmit()">
+<form [formGroup]="playerGroup" (ngSubmit)="onSubmit()" novalidate>
   <mat-form-field appearance="outline">
     <mat-label>Name</mat-label>
     <input
+      id="add-player-input"
       matInput
       type="text"
       autocomplete="off"
@@ -23,7 +24,7 @@
       {{ getErrorMessage() }}
     </mat-error>
   </mat-form-field>
-  <div>
+  <span>
     <button
       mat-raised-button
       color="primary"
@@ -33,5 +34,5 @@
     >
       Add
     </button>
-  </div>
+  </span>
 </form>
