--- a/src/app/tournament/containers/setup-page/setup-page.component.html
+++ b/src/app/tournament/containers/setup-page/setup-page.component.html
@@ -25,7 +25,7 @@
   </section>
 </div> -->
 <div class="content-container">
-  <mm-players-list [players]="players$ | async"></mm-players-list>
+  <!-- <mm-players-list [players]="players$ | async"></mm-players-list> -->
 </div>
 
 <footer class="mat-elevation-8">
