--- a/src/app/setup/containers/players-page/players-page.component.html
+++ b/src/app/setup/containers/players-page/players-page.component.html
@@ -1,3 +1,8 @@
+<mat-toolbar color="primary" class="mat-elevation-z4">
+  <span>Players</span>
+  <span class="spacer"></span>
+  <mat-icon>search</mat-icon>
+</mat-toolbar>
 <div class="container" [class.xsmall]="isXSmallDisplay$ | async">
   <div class="no-content-container" *ngIf="!(hasPlayers$ | async)">
     <div class="no-content">
@@ -7,7 +12,6 @@
   </div>
   <mm-players-list
     *ngIf="hasPlayers$ | async"
-    [isXSmallDisplay]="isXSmallDisplay$ | async"
     [players]="players$ | async"
   ></mm-players-list>
 </div>
