feat(setup): Starting on EditPlayerPage.
- Changing path of PlayersPage.
- Creating EditPlayerPage, and navigating to it when clicking on a player.

Issue #96

--- a/src/app/setup/components/players-list/players-list.component.html
+++ b/src/app/setup/components/players-list/players-list.component.html
@@ -1,7 +1,5 @@
 <mat-action-list>
-  <button mat-list-item *ngFor="let player of players">
-    <!-- <mat-icon mat-list-icon>edit</mat-icon> -->
-    <span mat-line>{{player.name}}</span>
-    <!-- <span matLine class="dropped-label" *ngIf="player.dropped">Dropped</span> -->
+  <button mat-list-item *ngFor="let player of players" (click)="editPlayer.emit(player)">
+    {{player.name}}
   </button>
 </mat-action-list>
