feat(setup): Creating EditPlayerForm.
Issue #96

--- a/src/app/setup/containers/edit-player-page/edit-player-page.component.html
+++ b/src/app/setup/containers/edit-player-page/edit-player-page.component.html
@@ -1,1 +1,6 @@
-<p>edit-player-page works!</p>
+<mat-toolbar color="primary">
+  <button mat-icon-button aria-label="back" (click)="back()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
+</mat-toolbar>
+<mm-edit-player-form></mm-edit-player-form>
