feat(setup): Making more flexible PlayerSheet.
- For both adding and editing.
- Throwing out EditPlayerPage, just going to use the sheet.

Issue #96

--- a/src/app/setup/containers/players-page/players-page.component.html
+++ b/src/app/setup/containers/players-page/players-page.component.html
@@ -13,7 +13,7 @@
   <mm-players-list
     *ngIf="hasPlayers$ | async"
     [players]="players$ | async"
-    (editPlayer)="onEditPlayer($event)"
+    (playerClicked)="editPlayer($event)"
   ></mm-players-list>
 </div>
 
