--- a/src/app/setup/components/player-sheet/player-sheet.component.html
+++ b/src/app/setup/components/player-sheet/player-sheet.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="playerGroup" (ngSubmit)="onSubmit()" novalidate>
+<form [formGroup]="playerGroup" (ngSubmit)="submit()" novalidate>
   <mat-form-field appearance="outline">
     <mat-label>Name</mat-label>
     <input
@@ -24,6 +24,9 @@
       {{ getErrorMessage() }}
     </mat-error>
   </mat-form-field>
+  <mat-slide-toggle *ngIf="editPlayer" color="warn" formControlName="dropped"
+    >Dropped</mat-slide-toggle
+  >
   <span>
     <button
       mat-raised-button
@@ -32,7 +35,7 @@
       class="add-button"
       [disabled]="playerGroup.invalid"
     >
-      Add
+      {{ editPlayer ? 'Save' : 'Add' }}
     </button>
   </span>
 </form>
