--- a/src/app/setup/components/players-list/players-list.component.html
+++ b/src/app/setup/components/players-list/players-list.component.html
@@ -1,5 +1,5 @@
 <mat-action-list>
-  <button mat-list-item *ngFor="let player of players" (click)="editPlayer.emit(player)">
+  <button mat-list-item *ngFor="let player of players" (click)="playerClicked.emit(player)">
     {{player.name}}
   </button>
 </mat-action-list>
