--- a/src/app/setup/components/player-sheet/player-sheet.component.scss
+++ b/src/app/setup/components/player-sheet/player-sheet.component.scss
@@ -7,6 +7,10 @@
     display: flex;
     flex-direction: column;
 
+    mat-slide-toggle {
+      margin-bottom: 24px;
+    }
+
     .add-button {
       text-transform: uppercase;
       width: 100%;
